test/libsolidity/syntaxTests/nameAndTypeResolution/076_fallback_function_in_library.sol
library C {
    fallback() external {}
}
// ----
// TypeError: (16-38): Libraries cannot have fallback functions.
